# internal/controller/http/v1/dto.go
@@ -1,7 +1,6 @@
 package v1
 
 type taskRequestDTO struct {
-	CreationDate string `json:"creationDate"`
-	Author       string `json:"author"`
-	StatusID     int64  `json:"statusID"`
+	Author   string `json:"author"`
+	StatusID int64  `json:"statusID"`
 }
