# internal/controller/http/v1/task.go
@@ -6,15 +6,15 @@ import (
 	"strconv"
 	"task-microservices/internal/entity"
 	"task-microservices/internal/usecase"
-	"time"
 )
 
 type taskRoutes struct {
-	t usecase.TaskContract
+	auth *AuthMiddle
+	t    usecase.TaskContract
 }
 
-func newTaskRoutes(handler *gin.RouterGroup, t usecase.TaskContract) {
-	tr := &taskRoutes{t: t}
+func newTaskRoutes(handler *gin.RouterGroup, t usecase.TaskContract, auth *AuthMiddle) {
+	tr := &taskRoutes{t: t, auth: auth}
 
 	handler.GET("/tasks", tr.getTasks)
 	handler.GET("/task/:id", tr.getTaskByID)
@@ -24,6 +24,7 @@ func newTaskRoutes(handler *gin.RouterGroup, t usecase.TaskContract) {
 
 // @Summary GetAllTasks
 // @Tags task
+// @Security ApiKeyAuth
 // @Description Get all tasks
 // @ID get-all-tasks
 // @Accept json
@@ -32,6 +33,11 @@ func newTaskRoutes(handler *gin.RouterGroup, t usecase.TaskContract) {
 // @Failure 500 {object} errResponse
 // @Router /api/v1/tasks [get]
 func (t *taskRoutes) getTasks(c *gin.Context) {
+	err := t.auth.authMiddle(c)
+	if err != nil {
+		errorResponse(c, http.StatusUnauthorized, err.Error())
+		return
+	}
 	listTasks, err := t.t.GetTasks(c.Request.Context())
 	if err != nil {
 		errorResponse(c, http.StatusInternalServerError, err.Error())
@@ -42,6 +48,7 @@ func (t *taskRoutes) getTasks(c *gin.Context) {
 
 // @Summary GetTaskById
 // @Tags task
+// @Security ApiKeyAuth
 // @Description Get task by id
 // @ID get-task-by-id
 // @Accept json
@@ -52,6 +59,11 @@ func (t *taskRoutes) getTasks(c *gin.Context) {
 // @Failure 500 {object} errResponse
 // @Router /api/v1/task/{id} [get]
 func (t *taskRoutes) getTaskByID(c *gin.Context) {
+	err := t.auth.authMiddle(c)
+	if err != nil {
+		errorResponse(c, http.StatusUnauthorized, err.Error())
+		return
+	}
 	taskID, err := strconv.ParseInt(c.Param("id"), 10, 64)
 	if err != nil {
 		errorResponse(c, http.StatusBadRequest, err.Error())
@@ -67,6 +79,7 @@ func (t *taskRoutes) getTaskByID(c *gin.Context) {
 
 // @Summary DeleteTask
 // @Tags task
+// @Security ApiKeyAuth
 // @Description Delete task by id
 // @ID delete-task
 // @Accept json
@@ -77,6 +90,11 @@ func (t *taskRoutes) getTaskByID(c *gin.Context) {
 // @Failure 500 {object} errResponse
 // @Router /api/v1/task/{id} [delete]
 func (t *taskRoutes) deleteTaskByID(c *gin.Context) {
+	err := t.auth.authMiddle(c)
+	if err != nil {
+		errorResponse(c, http.StatusUnauthorized, err.Error())
+		return
+	}
 	taskID, err := strconv.ParseInt(c.Param("id"), 10, 64)
 	if err != nil {
 		errorResponse(c, http.StatusBadRequest, err.Error())
@@ -92,6 +110,7 @@ func (t *taskRoutes) deleteTaskByID(c *gin.Context) {
 
 // @Summary CreateTask
 // @Tags task
+// @Security ApiKeyAuth
 // @Description Create new task
 // @ID create-task
 // @Accept json
@@ -102,20 +121,19 @@ func (t *taskRoutes) deleteTaskByID(c *gin.Context) {
 // @Failure 500 {object} errResponse
 // @Router /api/v1/task [post]
 func (t *taskRoutes) createTask(c *gin.Context) {
+	err := t.auth.authMiddle(c)
+	if err != nil {
+		errorResponse(c, http.StatusUnauthorized, err.Error())
+		return
+	}
 	req := new(taskRequestDTO)
 	if err := c.ShouldBindJSON(req); err != nil {
 		errorResponse(c, http.StatusBadRequest, err.Error())
 		return
 	}
-	creationDate, err := time.Parse(time.RFC3339, req.CreationDate)
-	if err != nil {
-		errorResponse(c, http.StatusBadRequest, err.Error())
-		return
-	}
 	id, err := t.t.CreateTask(c.Request.Context(), entity.Task{
-		CreationDate: creationDate,
-		Author:       req.Author,
-		StatusID:     req.StatusID,
+		Author:   req.Author,
+		StatusID: req.StatusID,
 	})
 	if err != nil {
 		errorResponse(c, http.StatusInternalServerError, err.Error())
